--- a/layouts/partials/blog/timeline-card.html
+++ b/layouts/partials/blog/timeline-card.html
@@ -7,7 +7,7 @@
 				<a href="{{ .Permalink }}">{{ .Title }}
 			</h3>
 			<!-- <h1>{{.Title}}</h1> -->
-			<p class="roboto-medium mt-2">
+			<p class="roboto-regular mt-2">
 				{{.Summary | truncate 200}}
 			</p>
 
